# chutes-sek8s

./: .gitignore  .gitmodules  LICENSE  Makefile  NOTES.md  README.md  metadata.json  pyproject.toml  sek8s.code-workspace
.github/workflows/: system-manager-openapi.yml  version-tag.yml
ansible/k3s/: README.md  inventory.yml
ansible/k3s/handlers/: main.yml
ansible/k3s/playbooks/: site.yml
ansible/k3s/playbooks/group_vars/: all.yml  host.yml
ansible/k3s/roles/admission-controller/defaults/: main.yml
ansible/k3s/roles/admission-controller/files/: admission-controller.conf  admission-controller.service  cosign-registries.json  opa-config.yaml  opa.service
ansible/k3s/roles/admission-controller/handlers/: main.yml
ansible/k3s/roles/admission-controller/tasks/: configure-admission-service.yml  configure-cosign.yml  configure-k3s-webhook.yml  configure-opa-service.yml  deploy-policies.yml  deploy-vap.yml  install-admission-controller.yml  install-cosign.yml  install-opa.yml  main.yml  setup-gatekeeper.yml  setup-tls.yml
ansible/k3s/roles/admission-controller/templates/: admission-config.json.j2  admission-controller.env.j2  admission-webhook.yaml.j2  cosign-registries.json.j2
ansible/k3s/roles/attestation-service/defaults/: main.yml
charts/chutes-miner-gpu/: values.yaml
charts/chutes-miner-gpu/templates/: failed-chute-cleanup-cronjob.yaml
config/: k3d-config.yml  k3s-config.yml  k3s.service
docker/: Dockerfile  docker-compose.base.yaml  docker-compose.yaml  image.conf
docker/scripts/: entrypoint.sh  k3d-entrypoint-custom.sh
docs/: debug-mode.md  end-to-end-miner.md  system-status.md  system_manager_openapi.json
guest-tools/: README.md
guest-tools/scripts/: build-base-image.sh  build-server-image.sh  extract-acpi.sh  extract-vm-measurements.sh  run-image.sh  setup-server.sh  test-image.sh
guest-tools/scripts/boot/: 02-set-hostname.sh  03-k3s-config.sh  04-k3s-label.sh  04-k3s-miner-credentials.sh
guest-tools/tests/: admission-controller-tests.sh  chroot-tests.sh  integration_tests.sh  module-tests.sh  mount-tests.sh
guest-tools/tests/test-manifests/: mount-test-pods.yaml
host-tools/: README.md
host-tools/docs/: CACHE.md
host-tools/scripts/: CONFIG-GUIDE.md  bind.sh  config-schema.json  config.debug.example.yaml  config.prod.example.yaml  config.tmpl.yaml  create-cache.sh  create-config.sh  launch.sh  parse-config.py  quick-launch.sh  reset-gpus.sh  run-td  run-vm.sh  setup-bridge.sh  setup-hugepages.sh  setup-macvtap.sh  show-passthrough-devices.sh  unbind.sh  vfio-passthrough.rules
host-tools/scripts/chutes_host/: __main__.py  config.py  detection.py  passthrough.py  qemu.py  vfio.py
host-tools/scripts/chutes_host/gpu/: profiles.py  tools.py
host-tools/scripts/config/: CONFIG-GUIDE.md  config-schema.json  config.debug.example.yaml  config.prod.example.yaml  config.tmpl.yaml
host-tools/scripts/gpu-tools/: README.md  bundle-tools.sh  entry_point.py  nvidia_gpu_admin_tools-2025.11.21-py3-none-any.whl  pyproject.toml
host-tools/scripts/volumes/: create-cache.sh  create-config.sh
k8s/: adminssion-configuration.yml  admission.webhook.yml  kind-config.yml  namespaces.yml  netpol.yml  rbac.yml
makefiles/: development.mk  images.mk  local.mk
nvevidence/: Makefile  pyproject.toml
nvevidence/chutes_nvevidence/: attestation.py  cli.py  exceptions.py  util.py
nvevidence/scripts/: test.sh
scripts/: build-base-image.sh  build-server-image.sh  build-td-image.sh  first-boot.sh  generate_openapi.py  setup-app.sh  setup-server.sh  test-image.sh
scripts/boot/: 02-k3s-config.sh  02-set-hostname.sh  04-k3s-miner-kubeconfig.sh
scripts/tdx/: build-td-image.sh  test-image.sh
sek8s/: admission_controller.py  config.py  exceptions.py  main.py  metrics.py  models.py  responses.py  server.py
sek8s/providers/: gpu.py  nvtrust.py  tdx.py
sek8s/services/: _shared.py  admission_controller.py  attestation.py  attestation_proxy.py  manager.py  system_status.py  util.py
sek8s/system_manager/cache/: manager.py  models.py  responses.py  router.py  util.py
sek8s/system_manager/status/: models.py  responses.py  router.py  util.py
sek8s/validators/: base.py  cosign.py  opa.py  registry.py
tests/: conftest.py
tests/assets/manifests/fail/: create-namespace.yaml  dangerous-capability.yaml  forbidden-env-var.yaml  host-network-pod.yaml  invalid-host-path.yaml  no-resource-limits.yaml  privileged-pod.yaml  untrusted-registry.yaml
tests/assets/manifests/pass/: valid-cache-mount.yaml  valid-env-vars.yaml  valid-job-with-empty-dir.yaml  valid-pod.yaml
tests/fixtures/: env.py  http.py  k8s.py
tests/integration/: test_cosign_validator.py  test_system_status_disk.py
tests/opa/: chutes_root_test.rego
tests/scripts/: setup-test-images.sh
tests/unit/: test_admission_controller.py  test_attestation_service.py  test_config.py  test_metrics.py  test_openapi_spec.py  test_system_status.py  test_system_status_config.py  test_validators.py  test_webhook_server.py
utils/: extract_tdx_quote.c  rtmr_capture.sh  rtmr_diff.sh
(+205 files in other folders)
