[tool.poetry]
name = "sek8s"
version = "0.1.0"
description = ""
authors = ["Kyle Widmann <kyle@chutes.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
autoflake = "^2.3.1"
flask = "^3.1.1"
cryptography = "^45.0.4"
psutil = "^7.0.0"
aiohttp = "^3.12.15"
cachetools = "^6.1.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pytest-asyncio = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
bandit = "^1.7.8"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
admission-controller = 'sek8s.admission_controller:run'

[tool.isort]
profile = "black"

[tool.coverage.report]
# Regexes for lines to exclude from considerationm
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
omit = [
]