[tool.poetry]
name = "sek8s"
version = "0.1.0"
description = ""
authors = ["Kyle Widmann <kyle@chutes.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
autoflake = "^2.3.1"
flask = "^3.1.1"
cryptography = "^45.0.4"
psutil = "^7.0.0"
aiohttp = "^3.12.15"
cachetools = "^6.1.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
loguru = "^0.7.3"
pytest-asyncio = "^1.2.0"
fastapi = ">=0.110.1,<0.111.0"
uvicorn = "^0.37.0"
nvidia-ml-py = "^13.580.82"
httpx = "^0.28.1"
orjson = "^3.11.3"
backoff = "^2.2.1"
bittensor = "^9.12.2"
substrate-interface = "^1.7.11"
aiocache = "^0.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^7.0.0"
bandit = "^1.7.8"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
admission-controller = 'sek8s.serivces.admission_controller:run'
attestation-service = 'sek8s.services.attestation:run'
attestation-proxy = 'sek8s.services.attestation_proxy:run'
system-status = 'sek8s.services.system_status:run'

[tool.isort]
profile = "black"

[tool.coverage.report]
# Regexes for lines to exclude from considerationm
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
omit = [
]