[tool.poetry]
name = "chutes-nvevidence"
version = "0.1.0"
description = ""
authors = ["Kyle Widmann <kyle@chutes.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
autoflake = "^2.3.1"
nv-attestation-sdk = "^2.6.2"
typer = "^0.19.2"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
bandit = "^1.7.8"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[tool.poetry.scripts]
chutes-nvevidence = "chutes_nvevidence.cli:app"

[[tool.mypy.overrides]]
module = "nv_attestation_sdk.*"
follow_untyped_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.report]
# Regexes for lines to exclude from considerationm
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
omit = [
]